; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_amba-pl010.c_pl010_resume.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_amba-pl010.c_pl010_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amba_device = type { i32 }
%struct.uart_amba_port = type { i32 }

@amba_reg = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.amba_device*)* @pl010_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pl010_resume(%struct.amba_device* %0) #0 {
  %2 = alloca %struct.amba_device*, align 8
  %3 = alloca %struct.uart_amba_port*, align 8
  store %struct.amba_device* %0, %struct.amba_device** %2, align 8
  %4 = load %struct.amba_device*, %struct.amba_device** %2, align 8
  %5 = call %struct.uart_amba_port* @amba_get_drvdata(%struct.amba_device* %4)
  store %struct.uart_amba_port* %5, %struct.uart_amba_port** %3, align 8
  %6 = load %struct.uart_amba_port*, %struct.uart_amba_port** %3, align 8
  %7 = icmp ne %struct.uart_amba_port* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.uart_amba_port*, %struct.uart_amba_port** %3, align 8
  %10 = getelementptr inbounds %struct.uart_amba_port, %struct.uart_amba_port* %9, i32 0, i32 0
  %11 = call i32 @uart_resume_port(i32* @amba_reg, i32* %10)
  br label %12

12:                                               ; preds = %8, %1
  ret i32 0
}

declare dso_local %struct.uart_amba_port* @amba_get_drvdata(%struct.amba_device*) #1

declare dso_local i32 @uart_resume_port(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
